welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	if(indexOfValue(nums,2)==-1){
		return false
	}
	if(indexOfValue(nums,3)==-1){
		return false
	}
	if(indexOfValue(nums,3)==-1){
		return false
	}else{
		return true
	}
}




def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var i = 0
	while(i < nums.length && nums(i) != value){
  	i = i + 1
  }
  if(i < nums.length){
  	return i 
  }else{
  	return -1
  }
}



